Closed
Bug 17431
Opened 26 years ago
Closed 26 years ago
[DOGFOOD] Crash when submitting Bugzilla query
Categories
(Core :: DOM: Core & HTML, defect, P1)
Core
DOM: Core & HTML
Tracking
()
VERIFIED
FIXED
M11
People
(Reporter: mscott, Assigned: pollmann)
References
Details
(Whiteboard: [PDT+][Fix in hand, need approval])
This isn't a bug sumbmission problem but a crash that occurrs when entering a
query into the bugzilla query page.
Here's an excerpt of the stack trace for the crash:
nsFormFrame::ProcessAsURLEncoded(nsIFormProcessor * 0x00000000, int 0, nsString
& {""}, nsIFormControlFrame * 0x0430bcc8) line 741 + 22 bytes
nsFormFrame::OnSubmit(nsFormFrame * const 0x03110b90, nsIPresContext *
0x02e56610, nsIFrame * 0x0430bc90) line 505 + 30 bytes
nsHTMLButtonControlFrame::MouseClicked(nsIPresContext * 0x02e56610) line 294
nsGfxButtonControlFrame::HandleEvent(nsGfxButtonControlFrame * const 0x0430bc90,
nsIPresContext & {...}, nsGUIEvent * 0x0012f7c8, nsEventStatus &
nsEventStatus_eIgnore) line 223
nsEventStateManager::CheckForAndDispatchClick(nsEventStateManager * const
0x02ec3180, nsIPresContext & {...}, nsMouseEvent * 0x0012fbfc, nsEventStatus &
nsEventStatus_eIgnore) line 996 + 30 bytes
nsEventStateManager::PostHandleEvent(nsEventStateManager * const 0x02ec3180,
nsIPresContext & {...}, nsGUIEvent * 0x0012fbfc, nsIFrame * 0x0430bc90,
nsEventStatus & nsEventStatus_eIgnore, nsIView * 0x02ebb7f0) line 467 + 24 bytes
PresShell::HandleEvent(PresShell * const 0x02e99e74, nsIView * 0x02ebb7f0,
nsGUIEvent * 0x0012fbfc, nsEventStatus & nsEventStatus_eIgnore) line 2214 + 43
bytes
nsView::HandleEvent(nsView * const 0x02ebb7f0, nsGUIEvent * 0x0012fbfc, unsigned
int 8, nsEventStatus & nsEventStatus_eIgnore, int & 0) line 834
nsView::HandleEvent(nsView * const 0x02ebf430, nsGUIEvent * 0x0012fbfc, unsigned
int 8, nsEventStatus & nsEventStatus_eIgnore, int & 0) line 819
nsView::HandleEvent(nsView * const 0x02eb9c70, nsGUIEvent * 0x0012fbfc, unsigned
int 8, nsEventStatus & nsEventStatus_eIgnore, int & 0) line 819
nsView::HandleEvent(nsView * const 0x02e99490, nsGUIEvent * 0x0012fbfc, unsigned
int 28, nsEventStatus & nsEventStatus_eIgnore, int & 0) line 819
nsViewManager::DispatchEvent(nsViewManager * const 0x02e99660, nsGUIEvent *
0x0012fbfc, nsEventStatus & nsEventStatus_eIgnore) line 1739
HandleEvent(nsGUIEvent * 0x0012fbfc) line 63
nsWindow::DispatchEvent(nsWindow * const 0x02eb9b34, nsGUIEvent * 0x0012fbfc,
nsEventStatus & nsEventStatus_eIgnore) line 401 + 10 bytes
This is using a clean build on windows from about 7:30pm this evening (10/27).
| Assignee | ||
Updated•26 years ago
|
Status: NEW → ASSIGNED
OS: Windows NT → All
Hardware: PC → All
Summary: [DOGFOOD] Browser crashes when attempting to use Bugzilla Query → [DOGFOOD] Crash when submitting Bugzilla query
Target Milestone: M11
Updated•26 years ago
|
Severity: normal → critical
Priority: P3 → P1
I am moving this to blocker. I can't use Seamonkey daily for my bugs work until
this one is fixed :-(
| Assignee | ||
Comment 5•26 years ago
|
||
I've got a fix for this one in my tree. Should be ready for checkin soon.
| Assignee | ||
Updated•26 years ago
|
Whiteboard: [PDT+] → [PDT+][Fix in hand]
| Assignee | ||
Updated•26 years ago
|
Whiteboard: [PDT+][Fix in hand] → [PDT+][Fix in hand, need approval]
| Assignee | ||
Updated•26 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 7•26 years ago
|
||
Just checked in a fix.
Using the 1999110508 build under NT, I was able to perform a basic Bugzilla
query. Marking this verified.
Updated•7 years ago
|
Component: HTML: Form Submission → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•