Bug 17431: Clean house in form and form control destructors to allow reframing r=harishd a=choffman