layout/forms/nsGfxRadioControlFrame.cpp
@@ -53,7 +53,6 @@ nsGfxRadioControlFrame::nsGfxRadioControlFrame()
 
 nsGfxRadioControlFrame::~nsGfxRadioControlFrame()
 {
- mFormFrame->RemoveRadioControlFrame((nsIFormControlFrame *)this);
  NS_IF_RELEASE(mRadioButtonFaceStyle);
 }
 
