layout/html/forms/src/nsFormFrame.h
@@ -60,6 +60,7 @@ public:
     
   void AddFormControlFrame(nsIPresContext* aPresContext, nsIFormControlFrame& aFrame);
   static void AddFormControlFrame(nsIPresContext& aPresContext, nsIFrame& aFrame);
+  void RemoveFormControlFrame(nsIFormControlFrame& aFrame);
   void RemoveRadioControlFrame(nsIFormControlFrame * aFrame);
   nsresult GetRadioInfo(nsIFormControlFrame* aFrame, nsString& aName, nsRadioControlGroup *& aGroup);
 
